# MusicLib

./: .gitignore  CMakeLists.txt  README.md  audio_manager.cpp  audio_manager.hpp  audio_manager_portaudio.cpp  audio_manager_portaudio.hpp  audio_manager_rtaudio.cpp  audio_manager_rtaudio.hpp  command.hpp  command_processor.cpp  command_processor.hpp  command_stream.cpp  command_stream.hpp  data.hpp  envelope.cpp  envelope.hpp  instrument.cpp  instrument.hpp  instrument_manager.cpp  instrument_manager.hpp  osc.cpp  osc.hpp  sequencer.cpp  sequencer.hpp  time_manager.cpp  time_manager.hpp  util.hpp  voice.cpp  voice.hpp  wave_shaper.cpp  wave_shaper.hpp
demos/custom_format_1/: CMakeLists.txt  README.md  command_demo.hpp  main.cpp
demos/custom_format_1/songs/: gymnopedies
inc/: audio_manager.hpp  audio_manager_portaudio.hpp  command.hpp  command_processor.hpp  command_stream.hpp  device.hpp  device_manager.hpp  instrument.hpp  instrument_manager.hpp  osc.hpp  pitch.hpp  sequencer.hpp  time_manager.hpp  util.hpp  voice.hpp  wave_shaper.hpp
src/: audio_manager_portaudio.cpp  command_processor.cpp  command_stream.cpp  device.cpp  device_manager.cpp  instrument.cpp  instrument_manager.cpp  osc.cpp  pitch.cpp  sequencer.cpp  time_manager.cpp  voice.cpp  wave_shaper.cpp
